# Operating_System_Lab

./: .gitignore  LICENSE  README.md
Final/demo/: .lab4t.c.swp  a  a.cpp  a.s  a.txt  lab  lab4_test.cpp
Final/lab1/: cp  cp.c  cp.cpp
Final/lab1/FileCopier/: CMakeLists.txt  FileCopier_zh_CN.ts  conwin.cpp  conwin.h  conwin.ui  copy.cpp  copy.h  filecopier.cpp  filecopier.h  filecopier.ui  main.cpp  sub1.cpp  sub2.cpp  sub3.cpp
Final/lab2/: cp  my_cp.c
Final/lab3/: chr  my_dev.c
Final/lab4/Monitor/: CMakeLists.txt  Monitor_zh_CN.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitor.cpp  monitor.h
Final/lab5/: fs.img
Final/lab5/FileSystem/: CMakeLists.txt  DirOperations.cpp  FileOperations.cpp  FileSystem_zh_CN.ts  jsonconfig.cpp  jsonconfig.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  register.cpp  register.h  register.ui  system.cpp  system.h  system.ui  tinyfilesystem.cpp  tinyfilesystem.h
Lab1_process/: CMakeLists.txt  main.cpp
Lab2_thread/: 2.1_mutex.cpp  2.2_sync.cpp  CMakeLists.txt
Lab3_shared_memory/: CMakeLists.txt  Semaphore.cpp  Semaphore.h  SharedMemory.cpp  SharedMemory.h  main.cpp  main.h  read.cpp  write.cpp
Lab4_file_system/: CMakeLists.txt  link_file.bak  main.cpp  main.h
